--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: maikel.bosschaert@uhasselt.be
 description: >- # this means to ignore newlines until "baseurl:"
   One-day symposium on delay equations in Hasselt
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://benedelay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mmbosschaert
 
 # Build settings
