--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Delay-Day UHasselt
 email: maikel.bosschaert@uhasselt.be
 description: >- # this means to ignore newlines until "baseurl:"
   One-day symposium on delay equations in Hasselt
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "delaydayhasselt" # the subpath of your site, e.g. /blog
 url: "http://benedelay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mmbosschaert
 
