--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Delay-Day UHasselt
 email: maikel.bosschaert@uhasselt.be
 description: >- # this means to ignore newlines until "baseurl:"
   One-day symposium on delay equations in Hasselt
-baseurl: "delaydayhasselt" # the subpath of your site, e.g. /blog
-url: "http://benedelay.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://benedelay.github.io/delaydayhasselt/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mmbosschaert
 
 # Build settings
