--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Delay-Day UHasselt 
+title: Delay-Day Hasselt 
 email: maikel.bosschaert@uhasselt.be
 description: >- # this means to ignore newlines until "baseurl:"
   One-day symposium on delay equations in Hasselt
